# PyThermoDB

./: .gitignore  Acetaldehyde-2.pkl  Acetaldehyde.pkl  Acetaldehyde.yml  Carbon Dioxide-2.pkl  Carbon Dioxide.pkl  LICENSE  MANIFEST.in  README.md  README2.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  toluene-1.pkl
.agents/plugins/: marketplace.json
.github/: FUNDING.yml
app/: about.py  home.py  index.py  requirements.txt  search.py
app/utils/: utils.py
data/: Understanding_Distillation_Appendix_B_NRTL_Antoine.md  methanol_benzene_nrtl_antoine_reference.yml
diagrams/: build_component_thermodb.md  build_component_thermodb_from_reference.md  build_constants_thermodb.md  build_mixture_thermodb_from_reference.md  check_and_build_component_thermodb.md  check_and_build_constants_thermodb.md  mixture_table.md  reference_mixture_table.md
docs/: api-reference.md  app.md  comprehensive-walkthrough.md  constants.md  core-workflows.md  custom-references.md  docs.md  examples.md  index.md  matrix-mixture.md  package-logic.md  quickstart.md  readme-highlights.md  search.md  thermodb-build-apis.md
examples/: doc0.py
examples/CO2 Hydrogenation/: CARBON DIOXIDE.pkl  CO2 Hydrogenation.yml  Carbon Dioxide-multiple-3.pkl  The Molar Heat Capacities of Gases in the Ideal Gas (Zero-Pressure) State.csv  thermodb_CO2.py  thermodb_CO2_load.py  thermodb_CO2_load_multiple_data.py  thermodb_CO2_multiple_data.py
examples/basic-1/: CO2-enthalpy-of-formation.pkl  Methane-1.pkl  density.py  ref1.yml  test1-2.py  test1-3.py  test1.py  test3-1-load.py  test3-1.py  test3-2-load.py  test3.py  test4.py  test5.py
examples/basic-2/: Carbon Dioxide-1.pkl  check-component.py  doc1.py  doc2.py  str-ref-1.yml
examples/basic-3/: The Molar Heat Capacities of Gases in the Ideal Gas (Zero-Pressure) State.csv  acetylene.pkl  general data.yml  general_thermodb-1.py  general_thermodb.py  test1.py
examples/build thermo data/: build-thermodb-1.py  build-thermodb-2.py  build-thermodb-from-map-reference - 1.py  check-and-build-constant-thermodb-1.py  check-and-build-constant-thermodb-2.py  doc-1.ipynb  load-thermodb-1.py  load-thermodb-2.py  load-thermodb-3.py  ref_content.py
examples/build thermodb/: build-component-thermodb-from-reference - 1.py  build-component-thermodb-from-reference - 2.py  build-component-thermodb-from-reference - 3.py  build-component-thermodb-from-reference - 4.py  build-reference.py  filter-reference.py  reference_content.yaml  reference_content_nasa.py  source-ref-1.py  source-ref-1.yml
examples/case 1/: General Data.csv  general_thermodb-1.py  test1.py
examples/configs/: CO2_thermodb.pkl  CO2_thermodb_ignore_state.pkl  build component thermodb from reference - 1.py  build constants thermodb from reference - 1.py  build mixture thermodb from reference - 1.py  build mixture thermodb from reference - 2.py  build mixture thermodb from reference - 3.py  build mixture thermodb from reference - 4.py  build-mixture-thermodb-from-map-reference - 1.py  build-thermodb-from-map-reference - 2.py  build-thermodb-from-map-reference.py  component.py  doc0-1.py  doc0.py  doc1 - matrix table.py  doc1.py  doc2 - matrix table.py  doc2-table names.py  doc2.py  doc3 - matrix table.py  doc3.py  doc4.py  exp-build-thermodb-1 - check eq num.py  exp-build-thermodb-1.py  exp-build-thermodb-2.py  generate-constants-reference-rules-1.py  load & check str.py  load matrix thermodb - 1.py  map-reference - rename tb and res.py  map-reference.py  parse-equation.py  test3-load.py
examples/databooks/: CO2_Hydrogenation_Databook.yml  CO2_Hydrogenation_References.yml  General Data.csv  create-reference-1.py  create-reference-2.py  create-reference-3.py  create-reference-constants.py  custom_reference.yaml  custom_reference_2.yaml  doc1.py  load-reference-1.py  load-reference-2.py  reference.py  reference_original.py
notebooks/: carbon Dioxide-1.pkl  carbon monoxide-1.pkl  create-thermodb-ref-external.ipynb  create-thermodb.ipynb  doc1.ipynb  doc2.ipynb  load-thermodb.ipynb  methanol-1.pkl  my-notebook.ipynb  ref-1.ipynb  ref-external-load.ipynb  ref-external.ipynb  table-view.ipynb  thermodb_nrtl_0.pkl  water-1.pkl
pyThermoDB/: __init__.py  app.py  thermodb.py  thermodbX.py
test-general/: General Data.csv  The Molar Heat Capacities of Gases in the Ideal Gas (Zero-Pressure) State.csv  Vapor Pressure.csv  acetylene.pkl  carbon dioxide.pkl  general data.yml  general_thermodb-1.py  general_thermodb.py  test1.py
tests/: Acetaldehyde-3.pkl  CO2 Hydrogenation.json  CO2 Hydrogenation.yml  CO2-enthalpy-of-formation.pkl  Carbon Dioxide.pkl  General Data.csv  General Data.json  Interaction parameters of the NRTL equation-2.csv  Interaction parameters of the NRTL equation.csv  NRTL Non-randomness parameters-1.csv  NRTL Non-randomness parameters-1.yml  NRTL Non-randomness parameters-2.csv  NRTL_parameters.csv  Non-randomness parameters of the NRTL equation.csv  Table A.II The Molar Heat Capacities of Gases in the Ideal Gas (Zero-Pressure) State.csv  Table A.IV Enthalpies and Gibbs Energies of Formation.csv  Vapor Pressure.csv  carbon dioxide-yml-1.pkl  carbon dioxide-yml-2.pkl  carbon dioxide-yml-3.pkl  carbon dioxide-yml-4.pkl  check-component.py  check-format.py  custom_symbol_list.yml  demo_make_parm_identifiers.py  equation-body.yml  external-ref-1.py  nrtl parameters constant.csv  nrtl parameters equations.csv  nrtl-2.yml  nrtl-3.yml  nrtl.csv  nrtl.yml  ref1.yml  ref2.yml  source-ref-1.py  source-ref-1.yml  source-ref-2.py  source-ref-2.yml  test0.py  (+34 more)
(+309 files in other folders)
